--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <main>
         <p id="qr"><img src="assets/qrcode.png" alt="QR code website"></p>
         <h2>Week 2</h2>
+        <ul>
+            <li><a href="week2/index.html">Voorbeeld week 2</a></li>
+        </ul>
 
         <h2>Week 3</h2>
 
@@ -61,8 +64,8 @@
                 <li>
                     Image Compressor
                     <ul>
-                        <li><a href="https://saerasoft.com/caesium" target="extra">Caesium</a></li>
                         <li><a href="https://itf-webp.netlify.app/">ITF Fast Image Conversion &amp; Editing Tool</a></li>
+                        <li><a href="https://saerasoft.com/caesium" target="extra">Caesium</a></li>
                     </ul>
                 </li>
             </ol>
