--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         </ul>
 
         <h2>Week 3</h2>
+        <ul>
+            <li><a href="week3/index.html">Voorbeeld week 3</a></li>
+            <li><a href="https://fonts.google.com" target="_blank">Google Fonts</a></li>
+            <li><a href="https://emojipedia.org" target="_blank">Emojipedia</a></li>
+            <li>Optioneel (sem 2):
+                <a href="https://itf-full-stack-essentials.netlify.app/css-bootstrap/css_variables.html" target="_blank">CSS variables</a> en
+                <a href="https://itf-full-stack-essentials.netlify.app/css-bootstrap/css_nesting.html" target="_blank">CSS nesting</a></a>
+            </li>
+        </ul>
 
         <h2>Week 4</h2>
 
