--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/global.css">
-    <title>Voorbeelden web essential 1 WT</title>
+    <title>Voorbeelden Web Essentials 1 WT</title>
+    <meta name="description" content="Voorbeelden Web Essentials 1 WT">
 </head>
 <body data-x-data="{ showQR: false}">
 <div id="content">
@@ -27,13 +28,35 @@
             <li><a href="https://emojipedia.org" target="_blank">Emojipedia</a></li>
             <li>Optioneel (sem 2):
                 <a href="https://itf-full-stack-essentials.netlify.app/css-bootstrap/css_variables.html" target="_blank">CSS variables</a> en
-                <a href="https://itf-full-stack-essentials.netlify.app/css-bootstrap/css_nesting.html" target="_blank">CSS nesting</a></a>
+                <a href="https://itf-full-stack-essentials.netlify.app/css-bootstrap/css_nesting.html" target="_blank">CSS nesting</a>
             </li>
         </ul>
 
         <h2>Week 4</h2>
+        <ul>
+            <li><a href='week4/boxmodel.html'>Box model</a></li>
+            <li><a href='week4/mediaquery.html'>Media queries revisited</a></li>
+            <li><a href='week4/index.html'>Samenvatting week 4</a> (+ Google fonts + Font Awesome icons)</li>
+            <li><a href='week4/bootstrap_grid/index.html'>Bootstrap grid</a></li>
+            <li>Links
+                <ul>
+                    <li><a href="https://itf-bs5-playground.netlify.app" target="extra">ITF BS5 Playground</a></li>
+                    <li><a href="https://fonts.google.com/" target="extra">fonts.google.com</a></li>
+                    <li><a href="https://fontawesome.com/" target="extra">fontawesome.com</a></li>
+                    <li><a href="https://icons.getbootstrap.com/" target="extra">icons.bootstrap.com</a></li>
+                </ul>
+            </li>
+        </ul>
 
         <h2>Week 5</h2>
+
+        <ul>
+            <li>Links
+                <ul>
+                    <li><a href="https://itf-flexbox-playground.netlify.app" target="extra">ITF Flexbox Playground</a></li>
+                </ul>
+            </li>
+        </ul>
 
         <section id="extra">
             <h2>Extra links</h2>
