Les week 4 (update BS5 voorbeeld)

--- a/week4/bootstrap_grid/index.html
+++ b/week4/bootstrap_grid/index.html
@@ -10,56 +10,56 @@
 <body>
 <main class="container">
     <h1 class="py-sm-4">Heading 1 <span id="bs_breakpoint"></span></h1>
-    <!-- <div class="row">
-         <div class="col-sm-6 col-lg-4">
-             <p>1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam cumque ea eaque, eius est eum
-                 exercitationem iste molestias neque nisi quae quas reiciendis repudiandae sit ut veniam voluptate
-                 voluptatibus voluptatum!</p>
-         </div>
-         <div class="col-sm-6 col-lg-4">
-             <p>2 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam cumque ea eaque, eius est eum
-                 exercitationem iste molestias neque nisi quae quas reiciendis repudiandae sit ut veniam voluptate
-                 voluptatibus voluptatum!</p>
-         </div>
-         <div class="col-sm-12 col-lg-4">
-             <p>3 Adipisci aliquam architecto asperiores blanditiis commodi cupiditate, delectus dignissimos doloremque
-                 eaque error fuga fugiat incidunt minus mollitia nobis odio officiis omnis optio, quasi quis quos rem
-                 repudiandae ullam veritatis voluptatibus?</p>
-         </div>
-         <div class="col-sm-6 col-lg-6">
-             <p>4 Eius ex explicabo soluta! Ab ad cumque delectus deleniti libero non repellendus temporibus velit!
-                 Assumenda at cum delectus ex explicabo fuga, illum impedit inventore quasi ratione recusandae,
-                 veritatis. Enim, vel.</p>
-         </div>
-         <div class="col-sm-6 col-lg-6">
-             <p>5 Ad aperiam, dolores, doloribus ea eveniet fugit libero minus, placeat recusandae tempore ut voluptas!
-                 Accusamus aliquam aperiam doloremque eius incidunt iure, laudantium, magni minima necessitatibus
-                 praesentium quaerat quia saepe sit!</p>
-         </div>
-     </div>-->
-     <hr>
-     <!--<div class="row">
-         <div class="col-sm-6 col-md-8">
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet debitis, deleniti esse est exercitationem
-                 fugiat iusto labore libero natus nulla numquam optio perferendis possimus, reiciendis sapiente sunt
-                 voluptatem? Hic, itaque!</p>
-         </div>
-         <div class="col-sm-6 col-md-4 mt-2 mt-sm-0 gx-sm-0">
-             <img src="assets/bike1.jpeg" alt="bike 1">
-         </div>
-     </div>
-     <hr>
-     <div class="row">
-         <div class="col-sm-6 col-md-4 mt-2 mt-sm-0">
-             <img src="assets/bike2.jpeg" alt="bike 2">
-         </div>
-         <div class="col-sm-6 col-md-8 order-md-first">
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet debitis, deleniti esse est exercitationem
-                 fugiat iusto labore libero natus nulla numquam optio perferendis possimus, reiciendis sapiente sunt
-                 voluptatem? Hic, itaque!</p>
-         </div>
-     </div>
-    <hr>-->
+    <div class="row">
+        <div class="col-sm-6 col-lg-4">
+            <p>1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam cumque ea eaque, eius est eum
+                exercitationem iste molestias neque nisi quae quas reiciendis repudiandae sit ut veniam voluptate
+                voluptatibus voluptatum!</p>
+        </div>
+        <div class="col-sm-6 col-lg-4">
+            <p>2 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam cumque ea eaque, eius est eum
+                exercitationem iste molestias neque nisi quae quas reiciendis repudiandae sit ut veniam voluptate
+                voluptatibus voluptatum!</p>
+        </div>
+        <div class="col-sm-12 col-lg-4">
+            <p>3 Adipisci aliquam architecto asperiores blanditiis commodi cupiditate, delectus dignissimos doloremque
+                eaque error fuga fugiat incidunt minus mollitia nobis odio officiis omnis optio, quasi quis quos rem
+                repudiandae ullam veritatis voluptatibus?</p>
+        </div>
+        <div class="col-sm-6 col-lg-6">
+            <p>4 Eius ex explicabo soluta! Ab ad cumque delectus deleniti libero non repellendus temporibus velit!
+                Assumenda at cum delectus ex explicabo fuga, illum impedit inventore quasi ratione recusandae,
+                veritatis. Enim, vel.</p>
+        </div>
+        <div class="col-sm-6 col-lg-6">
+            <p>5 Ad aperiam, dolores, doloribus ea eveniet fugit libero minus, placeat recusandae tempore ut voluptas!
+                Accusamus aliquam aperiam doloremque eius incidunt iure, laudantium, magni minima necessitatibus
+                praesentium quaerat quia saepe sit!</p>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-sm-6 col-md-8">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet debitis, deleniti esse est exercitationem
+                fugiat iusto labore libero natus nulla numquam optio perferendis possimus, reiciendis sapiente sunt
+                voluptatem? Hic, itaque!</p>
+        </div>
+        <div class="col-sm-6 col-md-4 mt-2 mt-sm-0 gx-sm-0">
+            <img src="assets/bike1.jpeg" alt="bike 1">
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-sm-6 col-md-4 mt-2 mt-sm-0">
+            <img src="assets/bike2.jpeg" alt="bike 2">
+        </div>
+        <div class="col-sm-6 col-md-8 order-md-first">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet debitis, deleniti esse est exercitationem
+                fugiat iusto labore libero natus nulla numquam optio perferendis possimus, reiciendis sapiente sunt
+                voluptatem? Hic, itaque!</p>
+        </div>
+    </div>
+    <hr>
     <div class="row">
         <div class="col-md-8">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet debitis, deleniti esse est exercitationem
@@ -67,7 +67,8 @@
                 voluptatem? Hic, itaque!</p>
         </div>
         <div class="d-none d-md-block col-md-4 mt-2 mt-sm-0">
-            <img src="assets/bike3.jpeg" class="grayscale img_border" alt="bike 3" title="Hover to see this image in grayscale">
+            <img src="assets/bike3.jpeg" class="grayscale img_border" alt="bike 3"
+                 title="Hover to see this image in grayscale">
         </div>
     </div>
     <div class="row">
