--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
             <li><a href="https://fonts.google.com" target="_blank">Google Fonts</a></li>
             <li><a href="https://emojipedia.org" target="_blank">Emojipedia</a></li>
             <li>Optioneel (sem 2):
-                <a href="https://itf-full-stack-essentials.netlify.app/css-bootstrap/css_variables.html" target="_blank">CSS variables</a> en
-                <a href="https://itf-full-stack-essentials.netlify.app/css-bootstrap/css_nesting.html" target="_blank">CSS nesting</a>
+                <a href="https://itf-full-stack-essentials.netlify.app/css-bootstrap/css_variables.html"
+                   target="_blank">CSS variables</a> en
+                <a href="https://itf-full-stack-essentials.netlify.app/css-bootstrap/css_nesting.html" target="_blank">CSS
+                    nesting</a>
             </li>
         </ul>
 
@@ -46,14 +48,38 @@
                     <li><a href="https://icons.getbootstrap.com/" target="extra">icons.bootstrap.com</a></li>
                 </ul>
             </li>
+            <li>Links YouTube
+                <ul>
+                    <li><a href="https://www.youtube.com/watch?v=Wqu-d_b3K-0" target="extra">Bootstrap Grid System
+                        Tutorial | Bootstrap 5</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=TRQamL_UPh0" target="extra">New Grid System in
+                        Bootstrap 5 (Practical Examples)</a></li>
+                </ul>
+            </li>
         </ul>
 
         <h2>Week 5</h2>
-
         <ul>
+            <li><a href="week5/fixed/index.html">Fixed nav with flexbox</a></li>
+            <li><a href="week5/kerstkaart/index.html">Kerstkaart</a></li>
+            <li>Flexbox
+                <ul>
+                    <li><a href="week5/cheatSheets/flexbox_cheat_sheet_1.pdf" target="extra">Cheat sheet 1</a></li>
+                    <li><a href="week5/cheatSheets/flexbox_cheat_sheet_2.pdf" target="extra">Cheat sheet 2</a></li>
+                </ul>
+            </li>
             <li>Links
                 <ul>
-                    <li><a href="https://itf-flexbox-playground.netlify.app" target="extra">ITF Flexbox Playground</a></li>
+                    <li><a href="https://itf-flexbox-playground.netlify.app" target="extra">ITF Flexbox Playground</a>
+                    </li>
+                </ul>
+            </li>
+            <li>Links YouTube
+                <ul>
+                    <li><a href="https://www.youtube.com/watch?v=ZOK-DU7vT0A" target="extra">CSS flex shorthand in 4
+                        minutes</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=wsTv9y931o8" target="extra">Learn CSS Flexbox in 20
+                        Minutes (Course)</a></li>
                 </ul>
             </li>
         </ul>
@@ -96,7 +122,8 @@
                 <li>
                     Image Compressor
                     <ul>
-                        <li><a href="https://itf-webp.netlify.app/">ITF Fast Image Conversion &amp; Editing Tool</a></li>
+                        <li><a href="https://itf-webp.netlify.app/">ITF Fast Image Conversion &amp; Editing Tool</a>
+                        </li>
                         <li><a href="https://saerasoft.com/caesium" target="extra">Caesium</a></li>
                     </ul>
                 </li>
