--- a/week5/kerstkaart/index.html
+++ b/week5/kerstkaart/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="🎄Kerstkaart met wisselende afbeeldingen🎄">
     <title>🎄Kerstkaart 🎄</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_full.css">
 </head>
 <body>
 
